src/styles/base/base.scss
@import 'variables.scss';
html {
    font-size: $base-font-size;
}

@media only screen and (max-width: 480px) {
    html {
        font-size: $mobile-base-font-size;
    }
}

body {
    background-color: #fefefe;
}

a {
    color: inherit;
    text-decoration: inherit;
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.row-center {
    justify-content: center;
}

.text-center {
    text-align: center;
}

